--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,16 @@
 # org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 gregicalityversion=0.22.7
+gregtechfoodoptionversion=0.10.1
 project_fancy_name = "GregicalityOreAddon"
-project.version = 0.1
+project.version = 0.1.1
 project_curseforge_dependencies = [\
 	{\
 		"slug": "gregicality",\
 		"type": "requiredDependency"\
+	}\
+  	{\
+		"slug": "gregtechfoodoption",\
+		"type": "optionalDependency"\
 	}\
 ]
